:memo: update documentation

--- a/src/kafka-consumer.html
+++ b/src/kafka-consumer.html
@@ -1,6 +1,6 @@
 <script type="text/html" data-help-name="kafka-consumer">
     <p>Definition of kafka-consumer </p>
-	<p>Usage details can be found under https://github.com/emrebekar/node-red-contrib-kafkajs/blob/master/README.md</p>
+	<p>Usage details can be found under https://github.com/DacioSB/node-red-contrib-kafka-eventhub#readme</p>
 </script>
 
 <script type="text/html" data-template-name="kafka-consumer">
