--- a/src/kafka-producer.html
+++ b/src/kafka-producer.html
@@ -37,7 +37,7 @@
 
 <script type="text/html" data-help-name="kafka-producer">
     <p>Definition of kafka-producer </p>
-	<p>Usage details can be found under https://github.com/emrebekar/node-red-contrib-kafka/blob/master/README.md</p>
+	<p>Usage details can be found under https://github.com/DacioSB/node-red-contrib-kafka-eventhub#readme</p>
 </script>
 
 <script type="text/html" data-template-name="kafka-producer">
